feat: 그룹 limit -> comment limit으로 변경
